--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "@sendgrid/mail": "^7.7.0",
         "cors": "^2.8.5",
         "express": "^4.18.1",
+        "jsonwebtoken": "^8.5.1",
         "mongodb": "^4.9.1",
         "mongoose": "^6.5.4"
     }
