--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
     "description": "Urban games",
     "main": "index.js",
     "scripts": {
+        "start": "node .",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "author": "Viktor Vukev, Nikolay Stoyanov",
     "license": "MIT",
     "dependencies": {
         "@sendgrid/mail": "^7.7.0",
+        "bcrypt": "^5.1.0",
         "cors": "^2.8.5",
         "express": "^4.18.1",
         "jsonwebtoken": "^8.5.1",
