--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "dependencies": {
         "@sendgrid/mail": "^7.7.0",
         "bcrypt": "^5.1.0",
+        "cloudinary": "^1.33.0",
         "cors": "^2.8.5",
         "express": "^4.18.1",
-        "jsonwebtoken": "^8.5.1",
+        "jsonwebtoken": "^9.0.0",
         "mongodb": "^4.9.1",
         "mongoose": "^6.5.4"
     }
